# climate-risk-analytics

./: .gitignore  README.md
flood/: flood.docx
floods-france/: README.md  requirements_app.txt
floods-france/.claude/: launch.json
floods-france/app/: app.py
floods-france/app/pages/: 1_Cartes_Alea.py  2_Frequences.py
floods-france/app/utils/: api.py  stats.py
floods-france/notebooks/: 00_data_inventory.ipynb
floods-france/notebooks/01_hazard/: 01b_frequency_analysis.ipynb
floods-france/notebooks/02_terrain/: 02a_dem_preprocessing.ipynb
open_climate_risk/: .gitignore  CLAUDE.md  LICENSE  README.md  _brand_guidelines.pptx  _open_climate_risk_platform_presentation.pptx  _website_documentation.docx  environment.yml  pyproject.toml  requirements.txt
open_climate_risk/.claude/: launch.json  settings.local.json
open_climate_risk/kbc/: index.html  server.py
open_climate_risk/notebooks/: 04_cmip6_era5_climate_indicators.ipynb
open_climate_risk/notebooks/climada/: 01_framework.ipynb  02_tc_rain_surge.ipynb  03_river_flood.ipynb  04_coastal_flood.ipynb  05_european_storm.ipynb  06_wildfire.ipynb  07_drought.ipynb  08_crop_yield.ipynb  09_low_flow.ipynb  10_landslide.ipynb  11_supply_chain.ipynb  12_sovereign_adaptation.ipynb
open_climate_risk/src/open_climate_risk/: __init__.py  analysis.py  config.py  data.py  plot.py  report.py
open_climate_risk/tests/: conftest.py  test_analysis.py  test_data.py
open_climate_risk/website/: build_doc.js  capture_screenshots.js  index.html  package-lock.json  package.json
(+3 files in other folders)
